Fixed bug #42242 (sybase_connect() crashes)